--- a/css/main.css
+++ b/css/main.css
@@ -14,3 +14,76 @@ html {
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
 }
+.body_wrap {
+  height: 100%;
+  margin: auto;
+  position: relative;
+  width: 1200px;
+}
+header.main {
+  height: 73px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-image: url(../img/db_line.png);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-color: rgba(255, 255, 255, 0.8);
+  left: 0;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+}
+.logo_mini {
+  margin-left: 91px;
+  margin-right: 87px;
+  margin-top: 12px;
+}
+nav {
+  margin-top: 16px;
+  width: 620px;
+}
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+nav a {
+  font-weight: 300;
+  text-decoration: none;
+  color: #000000;
+  font-family: Roboto;
+  font-size: 24px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+.search {
+  height: 18px;
+  width: 99px;
+  border: none;
+  border: 3px solid #fff;
+  background-color: #fff;
+  border-radius: 3px;
+  margin-left: 40px;
+  margin-right: 37px;
+  margin-top: 16px;
+  font-size: 11px;
+}
+input[type='text'] {
+  background-image: url("../img/loupe.png");
+  background-position: right;
+  background-repeat: no-repeat;
+}
+.lang {
+  margin-right: 91px;
+  margin-top: 20px;
+}
+main {
+  height: 400px;
+}
