--- a/less/main.less
+++ b/less/main.less
@@ -8,3 +8,11 @@
 
 
 // Components
+
+// Parts
+@import "_header.less";
+@import "_main_section.less";
+@import "_best.less";
+@import "_contacts.less";
+@import "_footer.less";
+
