--- a/less/_general.less
+++ b/less/_general.less
@@ -1,5 +1,15 @@
 html{
-    
 	font-family: 'Roboto', sans-serif;
     .roboto-thin;
 }
+
+.body_wrap{
+    height: 100%;   
+    margin: auto;
+    position: relative;
+    width: 1200px;
+    
+}
+
+
+
