--- a/less/_main_section.less
+++ b/less/_main_section.less
@@ -1,3 +1,97 @@
 main{
-    height: 400px;
+    height: 100%;
+}
+
+.slider_item{
+    position: relative;
+}
+
+.slider_img_bg{
+    // position: relative;
+}
+
+.slider_img{
+    position: absolute;
+    top: 83px;
+    left: 72px;
+    z-index: 0;
+}
+
+.right_block_slider_item{
+    position: absolute;
+    top: 108px;
+    right: 92px;
+}
+
+.socials ul{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.socials li{
+    padding: 0;
+    margin: 0;
+}
+
+.text_right_block_slider_item{
+    .roboto-thin;
+    width: 184px;
+    margin-top: 24px;
+    font-size: 24px;
+    font-variant: small-caps;
+    color: #ffffff;
+    letter-spacing: -1px;
+}
+
+.content_slider_item{
+    position: absolute;
+    bottom: 48px;
+    width: 100%;
+}
+
+.content_slider_item h1{
+    padding: 0;
+    margin: 0;
+    .roboto-thin;
+    color: #ffffff;
+    font-size: 39px;
+    text-transform: uppercase;
+    font-variant: small-caps;
+    text-align: center;
+}
+
+.content_slider_item h2{
+    padding: 0;
+    margin: 0;
+    margin-top: 15px;
+    .roboto-regular;
+    color: #ffffff;
+    font-size: 24px;
+    font-weight: 400;
+    font-variant: small-caps;
+    /* Text style for "Seit 2019" */
+    letter-spacing: 4.36px;
+    text-align: center;
+}
+
+header.slider_second{
+    height: 73px;
+    display: flex;
+    background-image: url(../img/db_line.png);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-color: rgba(255, 255, 255, 0.8);
+    left: 0;
+    // position: absolute;
+    top: 300px;
+    width: 100%;
+    z-index: 100;
+}
+
+header.slider_second h2{
+    
 }
