--- a/less/_general.less
+++ b/less/_general.less
@@ -2,7 +2,7 @@ html{
 	font-family: 'Roboto', sans-serif;
 }
 
-.body_wrap{
+body{
     height: 100%;   
     margin: auto;
     position: relative;
@@ -10,3 +10,12 @@ html{
     
 }
 
+h1, h2, h3, h4{
+    margin: 0;
+    padding: 0;
+}
+
+
+.add_margin_26{
+    margin-top: 26px;
+}
