--- a/less/_mixin.less
+++ b/less/_mixin.less
@@ -16,3 +16,42 @@
 .roboto-medium{
     font-weight: 500;
 }
+
+
+.header_h2{
+    .roboto-light;
+    margin: 10px auto;
+    padding: 0;    
+    color: #ffffff;
+    font-size: 39px;
+    text-transform: uppercase;
+    font-variant: small-caps;
+}
+
+.header_with_opacity{
+    height: 73px;
+    display: flex;
+    background-image: url(../img/db_line.png);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-color: rgba(255, 0, 0, 0.4);
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 100;
+}
+
+.header_without_opacity{
+    height: 73px;
+    display: flex;
+    background-image: url(../img/db_line.png);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-color: rgba(255, 0, 0, 0.8);
+    left: 0;
+    // position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 100;
+}
