--- a/css/main.css
+++ b/css/main.css
@@ -10,14 +10,62 @@
 .roboto-medium {
   font-weight: 500;
 }
+.header_h2 {
+  font-weight: 300;
+  margin: 10px auto;
+  padding: 0;
+  color: #ffffff;
+  font-size: 39px;
+  text-transform: uppercase;
+  font-variant: small-caps;
+}
+.header_with_opacity {
+  height: 73px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-image: url(../img/db_line.png);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-color: rgba(255, 0, 0, 0.4);
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+}
+.header_without_opacity {
+  height: 73px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-image: url(../img/db_line.png);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-color: rgba(255, 0, 0, 0.8);
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+}
 html {
   font-family: 'Roboto', sans-serif;
 }
-.body_wrap {
+body {
   height: 100%;
   margin: auto;
   position: relative;
   width: 1200px;
+}
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
+  padding: 0;
+}
+.add_margin_26 {
+  margin-top: 26px;
 }
 header.main {
   height: 73px;
@@ -155,7 +203,12 @@ main {
   letter-spacing: 4.36px;
   text-align: center;
 }
-header.slider_second {
+section.slider_second,
+section.slider_third {
+  position: relative;
+}
+header.slider_second,
+header.gallery_header {
   height: 73px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -163,9 +216,220 @@ header.slider_second {
   background-image: url(../img/db_line.png);
   background-position: bottom;
   background-repeat: no-repeat;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 0, 0, 0.4);
   left: 0;
-  top: 300px;
+  position: absolute;
+  top: 0;
   width: 100%;
   z-index: 100;
+}
+header.product_header,
+header.contacts_header {
+  height: 73px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-image: url(../img/db_line.png);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-color: rgba(255, 0, 0, 0.8);
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+}
+header.slider_second h2,
+.gallery_header h2,
+.product_header h2,
+.contacts_header h2 {
+  font-weight: 300;
+  margin: 10px auto;
+  padding: 0;
+  color: #ffffff;
+  font-size: 39px;
+  text-transform: uppercase;
+  font-variant: small-caps;
+}
+.content_slider_second {
+  position: absolute;
+  top: 96px;
+  right: 96px;
+}
+.content_slider_second p {
+  font-weight: 400;
+  color: #ffffff;
+  font-size: 20px;
+  line-height: 26.12px;
+  font-variant: small-caps;
+  margin-left: 25px;
+}
+.content_slider_second li {
+  font-weight: 300;
+  color: #ffffff;
+  font-size: 20px;
+}
+.slider_third {
+  margin-top: -5px;
+}
+.gallery {
+  width: 100%;
+  height: 278px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+}
+.controls_white {
+  position: absolute;
+  top: 142px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.controls_left {
+  margin-left: 31px;
+}
+.controls_right {
+  margin-right: 31px;
+}
+.products {
+  width: 100%;
+  height: 246px;
+  position: relative;
+}
+.controls_red {
+  position: absolute;
+  top: 80px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.product_items {
+  margin-left: 79px;
+  margin-right: 79px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.product_item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.product_content {
+  margin-top: 24px;
+  font-variant: small-caps;
+  color: #ff3333;
+}
+.product_content h3 {
+  font-weight: 400;
+  font-size: 20px;
+}
+.product_content h4 {
+  font-weight: 500;
+  font-size: 20px;
+  letter-spacing: 1.7px;
+}
+.product_button {
+  background-image: url("../img/buy_button.png");
+  background-position: 165px 5px;
+  background-repeat: no-repeat;
+  background-color: #ff3333;
+  width: 195px;
+  height: 42px;
+  margin: auto;
+  cursor: pointer;
+}
+.button_title {
+  font-weight: 300;
+  color: #ffffff;
+  font-size: 27px;
+  font-variant: small-caps;
+  padding-top: 6px;
+  padding-left: 8px;
+}
+.product_title {
+  font-weight: 400;
+  color: #000000;
+  font-size: 31px;
+  font-variant: small-caps;
+  text-align: center;
+  padding-top: 14px;
+}
+.contacts_detail {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 35px 91px;
+}
+.contacts_detail h3 {
+  font-weight: 400;
+  color: #ff3333;
+  font-size: 20px;
+  font-variant: small-caps;
+}
+.contacts_detail h4 {
+  font-weight: 400;
+  margin-top: 5px;
+  color: #ff3333;
+  font-size: 17px;
+  text-transform: uppercase;
+}
+.contacts_detail .contacts_content {
+  font-weight: 400;
+  margin-top: 20px;
+  color: #000000;
+  font-size: 22px;
+  font-variant: small-caps;
+}
+footer {
+  height: 93px;
+  background-image: url(../img/db_line.png);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-color: #ffffff;
+  width: 100%;
+}
+.footer_content {
+  padding: 29px 91px 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+.footer_copyright {
+  font-weight: 500;
+  color: #000000;
+  font-size: 12px;
+  font-variant: small-caps;
+  margin-left: 120px;
+  letter-spacing: 0.4px;
+}
+.footer_pay_cards {
+  margin-left: 22px;
 }
