--- a/less/_main_section.less
+++ b/less/_main_section.less
@@ -2,25 +2,30 @@ main{
     height: 100%;
 }
 
-.slider_item{
+.slider_first{
     position: relative;
 }
 
-.slider_img_bg{
-    // position: relative;
+.owl-carousel{
+    // z-index: -100;
+}
+
+.slider_first_content{    
+    // z-index: 100;
 }
 
 .slider_img{
     position: absolute;
     top: 83px;
     left: 72px;
-    z-index: 0;
+    z-index: 1;
 }
 
 .right_block_slider_item{
     position: absolute;
     top: 108px;
     right: 92px;
+    z-index: 1;
 }
 
 .socials ul{
@@ -51,6 +56,7 @@ main{
     position: absolute;
     bottom: 48px;
     width: 100%;
+    z-index: 1;
 }
 
 .content_slider_item h1{
@@ -98,6 +104,7 @@ header.slider_second h2, .gallery_header h2, .product_header h2, .contacts_heade
     position: absolute;
     top:96px;
     right: 96px;
+    width: 433px;
 }
 
 .content_slider_second p{
@@ -118,6 +125,9 @@ header.slider_second h2, .gallery_header h2, .product_header h2, .contacts_heade
     // letter-spacing: -3px;
 }
 
+
+
+
 .slider_third{
 margin-top: -5px;
 }
@@ -126,8 +136,8 @@ margin-top: -5px;
     width: 100%;
     height: 278px;
     // background-color: #ccc;
-    display: flex;
-    justify-content: space-between;
+    // display: flex;
+    // justify-content: space-between;
     position: relative;
 }
 
@@ -137,18 +147,19 @@ margin-top: -5px;
     width: 100%;
     display: flex;
     justify-content: space-between;
+    z-index: 10000;
 }
 
-.controls_left{
-    // position: absolute;
-    // left: 31px;
-    margin-left: 31px;
+.controls_left_third{
+    position: absolute;
+    left: 31px;
+    top: 142px;
 }
 
-.controls_right{
-    // position: absolute;
-    // right: 111px;
-    margin-right: 31px;
+.controls_right_third{
+    position: absolute;
+    right: 31px;
+    top: 142px;
 }
 
 .products{
@@ -158,12 +169,29 @@ margin-top: -5px;
     // background-color: #ccc;
 }
 
+.product_gallery{
+    position: relative;
+}
+
 .controls_red{
     position: absolute;
     top: 80px;
     width: 100%;
     display: flex;
     justify-content: space-between;
+    z-index: 10000;
+}
+
+.controls_left_fourth{
+    position: absolute;
+    left: -48px;
+    top: 30px;
+}
+
+.controls_right_fourth{
+    position: absolute;
+    right: -48px;
+    top: 30px;
 }
 
 .product_items{
